@@ -5,6 +5,8 @@
     "DB_ENV->log_stat_print()", "DB_ENV->stat_print()".
   * Support for "DB_ENV->get_tmp_dir()".
   * Support for "DB_STAT_SUBSYSTEM" flag.
+  * Support for "DB_ENV->set_mp_max_openfd()", "DB_ENV->get_mp_max_openfd()",
+    "DB_ENV->set_mp_max_write()", "DB_ENV->get_mp_max_write()".
 
 4.8.2:
   * Support for "DB_OVERWRITE_DUP", "DB_FOREIGN_ABORT",
